--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
    
         <script type="importmap"> {
             "imports": {
-                "three": "/node_modules/three/build/three.module.js",
-                "three/addons/": "/node_modules/three/examples/jsm/",
-                "three/nodes": "/node_modules/three/examples/jsm/nodes/Nodes.js"
+                "three": "./node_modules/three/build/three.module.js",
+                "three/addons/": "./node_modules/three/examples/jsm/",
+                "three/nodes": "./node_modules/three/examples/jsm/nodes/Nodes.js"
             }
         }
         </script>
